scrollbar fix

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -69,8 +69,6 @@
 }
 
 * {
-  scrollbar-width: thin;
-  scrollbar-color: v.$color-lightened-3;
   font-family: "Roboto", serif;
   -webkit-tap-highlight-color: #fff0 !important;
 }
